--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "repository": "git@github.com:oaraujocesar/clean-node-api.git",
   "author": "César O. Araújo <oaraujocesar@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "eslint 'src/**' --fix",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
@@ -14,6 +23,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.0.0",
     "git-commit-msg-linter": "^4.1.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
     "typescript": "^4.6.2"
   }
 }
