--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "eslint 'src/**' --fix",
-      "git add"
+      "eslint 'src/**' --fix"
     ]
   },
   "devDependencies": {
