--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "César O. Araújo <oaraujocesar@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "lint-staged": {
     "src/**/*": [
@@ -14,6 +15,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "eslint": "^7.12.1",
@@ -23,7 +25,9 @@
     "eslint-plugin-promise": "^5.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   }
 }
