--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.6.0",
     "typescript": "^4.6.2"
   }
 }
