--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "eslint": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "5.13.0",
+    "eslint": "8.10.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "git-commit-msg-linter": "^4.1.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
-    "lint-staged": "^12.3.4",
+    "lint-staged": "^12.3.5",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2"
