--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "prepare": "husky install",
     "test": "jest --passWithNoTests --watch",
-    "test:staged": "jest --passWithNoTests"
+    "test:staged": "jest --passWithNoTests",
+    "lint:fix": "eslint 'src/**' --fix"
   },
   "lint-staged": {
     "src/**/*": [
